# subatomic

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  boot.asm  x86_64-unknown-subatomic-gnu.json
src/: lib.rs  panic.rs  subatomic.rs  vga.rs
src/asm/: boot.asm  grub.cfg  linker.ld  multiboot_header.asm
src/console/: color.rs  mod.rs  serial.rs  vga.rs
src/input/: cpuio.rs  mod.rs  poll.rs  scancode.rs  x86.rs
src/interrupts/: mod.rs
src/memory/: area_frame_allocator.rs  mod.rs
src/memory/paging/: entry.rs  mod.rs  table.rs
